first stab at addressing comments from PLoS One

--- a/dsmixtures-appendix-s1.tex
+++ b/dsmixtures-appendix-s1.tex
@@ -92,7 +92,7 @@ where $F$ is any continuous CDF on $(0,\infty]$. Exponentiation ensures that $e^
 
 \begin{figure*}
 \centering
-\includegraphics[width=0.5\textwidth]{figs/phidia.pdf}
+\includegraphics{figs/phidia.pdf}
 \caption{The relationship between the mixture proportions, $\phi_j$ and the quantities estimated during the optimization procedure, $\alpha_p$.}
 \label{mmds-phifig}
 \end{figure*}
