--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -74,13 +74,9 @@ $\ast$ E-mail: dave@ninepointeightone.net
 We present a new class of models for the detection function in distance sampling surveys of wildlife populations, based on finite mixtures of simple parametric key functions such as the half-normal. The models share many of the features of the widely-used ``key function plus series adjustment'' (K+A) formulation: they are flexible, produce plausible shapes with a small number of parameters, allow incorporation of covariates in addition to distance and can be fitted using maximum likelihood. One important advantage over the K+A approach is that the mixtures are automatically monotonic non-increasing and non-negative, so constrained optimization is not required to ensure distance sampling assumptions are honoured. We compare the mixture formulation to the K+A approach using simulations to evaluate its applicability in a wide set of challenging situations. We also re-analyze four previously problematic real-world case studies.  We find mixtures outperform K+A methods in many cases, particularly spiked line transect data (i.e., where detectability drops rapidly at small distances) and larger sample sizes.  We recommend that current standard model selection methods for distance sampling detection functions are extended to include mixture models in the candidate set.
 
 
-%\begin{keyword}
-%Finite mixture; Line transect sampling; Monotonicity constraint; Multiple covariate distance sampling; Point transect sampling.
-%\end{keyword}
-
 \section*{Introduction}
 
-Distance sampling \cite{Buckland:2001vm,Buckland:2004ts} is a suite of methods for estimating the size or density of biological populations.  There are two main variants: line and point transects. In both, an observer visits a randomly-located set of transect lines or points and records the distance, $y$, from the transect to each object of interest (i.e., animals or plants of the target species) that is detected within some truncation distance $w$.  Not all objects within $w$ are assumed to be detected; instead the observed distances are used to estimate the parameter vector, $\boldsymbol{\theta}$, of a detection function model, $g(y;\boldsymbol{\theta})$, which describes how the probability of detection declines with increasing distance.  An assumption of the conventional method is that $g(0;\boldsymbol{\theta})=1$. Given an estimate of $\boldsymbol{\theta}$, it is straightforward to estimate population size or density (see below).
+Distance sampling \cite{Buckland:2001vm,Buckland:2004ts} is a suite of methods for estimating the size or density of biological populations.  There are two main variants: line and point transects. In both, an observer visits a randomly-located set of transect lines or points and records the distance, $y$, from the transect to each object of interest (i.e., animals or plants of the target species) that is detected within some truncation distance $w$ (usually chosen after the survey has taken place \cite{Buckland:2001vm}).  Not all objects within $w$ are assumed to be detected; instead the observed distances are used to estimate the parameter vector, $\boldsymbol{\theta}$, of a detection function model, $g(y;\boldsymbol{\theta})$, which describes how the probability of detection declines with increasing distance.  An assumption of the conventional method is that $g(0;\boldsymbol{\theta})=1$. Given an estimate of $\boldsymbol{\theta}$, it is straightforward to estimate population size or density (see below).
 
 A key part of distance sampling, therefore, is specification of the detection function model. Buckland et al. (Chapter 2) \cite{Buckland:2001vm} provide a set of criteria for judging the utility of candidate model classes. Detection function models should be:
 \begin{enumerate}
@@ -103,7 +99,7 @@ The resulting detection functions are capable of being flat at zero distance and
 
 A constrained optimisation solution presents a number of problems. First, constrained maximization is a more complex optimization problem than unconstrained maximization; this means that in practice optimization algorithms may fail to find the constrained maximum.  Second, constrained maximum likelihood estimates do not have the same appealing properties as their unconstrained relatives -- for example the usual estimator of the standard error of the parameters (square root of the inverse of the information matrix) can be biased.  Third, constraints can only be applied at a finite number of points ($M=10$ is used in Distance and $M=20$ in mrds by default), which can lead to the constraint points missing non-monotonic parts of the function. Though increasing the number of points is an option, this incurs additional computational cost. An example of constrained maximisation failing is shown in the left panel of Figure \ref{fig1}. Finally, it is not clear how to implement the constraints in the case where there are additional covariates, particularly continuous covariates. One computationally expensive option would be to apply the constraints at every observed covariate combination (at present both Distance and mrds use unconstrained optimization when additional covariates are in the model). The central and right panels of Figure \ref{fig1} from Pike et al. \cite{Pike:2003ug} show an example of covariate models fitted using unconstrained optimisation: a strongly non-monotonic function has been fitted for some covariate values. Detection probability estimates outside the range $[0,1]$ are sometimes encountered during maximization when models include covariates. Given the above issues, it seems appealing to use a formulation that guarantees monotonicity from the outset.
 
-Mixture models have been applied in the capture-recapture literature \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}. The main utility of mixture models in capture-recapture is in better accounting for between-individual heterogeneity, which can cause severe bias if unmodelled \cite{Link:2003wo}. Unmodelled heterogeneity is not generally considered an issue in distance sampling, provided that detection at zero distance is certain, heterogeneity is not extreme and a flexible detection function model is used \cite[Section 11.12]{Buckland:2004ts}. Mixture models offer the potential for flexible modelling since the individual parts of the mixture model (the \textit{mixture components}) can be combined to obtain flexible detection functions, and provided each component is monotonic non-increasing, the resulting combination will also be monotonic non-increasing. In addition, mixture models are potentially well suited to deal with highly heterogeneous detection probabilities, where some part of the population is only observable at close distances while others are readily detected almost regardless of distance (for example bird species where males are more vocal than females). Such a situation results in a ``spiked'' detection function with a long flat tail -- Figure \ref{fig1} shows relatively mild examples. In a mixture model, different parts of the sample could be represented by different components, providing a good fit to spiked data and an appealing conceptual explanation for the underlying data.
+Mixture models have been applied in the capture-recapture literature \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}. The main utility of mixture models in capture-recapture is in better accounting for between-individual heterogeneity, which can cause severe bias if unmodelled \cite{Link:2003wo}. Unmodelled heterogeneity is not generally considered an issue in distance sampling, provided that detection at zero distance is certain, heterogeneity is not extreme and a flexible detection function model is used \cite[Section 11.12]{Buckland:2004ts}. Finite mixture models offer the potential for flexible modelling since the individual parts of the mixture model (the \textit{mixture components}) can be combined to obtain flexible detection functions, and provided each component is monotonic non-increasing, the resulting combination will also be monotonic non-increasing. In addition, mixture models are potentially well suited to deal with highly heterogeneous detection probabilities, where some part of the population is only observable at close distances while others are readily detected almost regardless of distance (for example bird species where males are more vocal than females). Such a situation results in a ``spiked'' detection function with a long flat tail -- Figure \ref{fig1} shows relatively mild examples. In a mixture model, different parts of the sample could be represented by different components, providing a good fit to spiked data and an appealing conceptual explanation for the underlying data.
 
 Here we introduce a new class of distance sampling detection function models, based on mixtures of simple parametric key functions.  In the next section, we describe the models.  We then illustrate their use and explore their performance by applying them to simulated data, and to real data from a number of studies. We also compare results with those obtained from the current standard K+A approach, and by using a combined approach where both the mixtures and K+A models are fitted and a final model selected using AIC. An R package, mmds \cite{mmds} (Mixture Model Distance Sampling), implementing the methods is available from CRAN.
 
@@ -121,7 +117,7 @@ Although other monotonic functions such as hazard-rate could be chosen, and the 
 \begin{equation*}
 g(y,\mathbf{z}; \boldsymbol{\theta}, \boldsymbol{\phi}) = \sum_{j=1}^J \phi_j \exp \Big( - \frac{y^2}{2\sigma_j(\mathbf{z})^2} \Big).
 \end{equation*}
-We assume that each mixture component has a different scale but that the covariates affect the scale parameters in the same way (though other, more complex, models may be possible).
+Although each mixture component has a different scale, the covariates affect the scale parameters in the same way (though other, more complex, models may be possible).
 
 Covariates are included as in Marques and Buckland \cite{Marques:2003vb}, by decomposing the scale parameter $\sigma$ (see also Marques et al. \cite{Marques:2007vm}).  Using $i$ to subscript each observation, our formulation for the scale parameter $\sigma_{ij}$, is
 \begin{equation*}
@@ -226,14 +222,14 @@ Group C were the 3-point mixture scenarios.  For C1, results were similar to A2 
 
 We first address the results of the Group D simulations when covariates were available for inclusion in candidate models. Results for D1 were positively biased at lower sample sizes, but less so as the sample size increased, and almost unbiased by 120 observations, where the correct model was selected most of the time (Figure \ref{sim-boxplots}).  Results for D2 were close to unbiased at all sample sizes. Estimates from the K+A models were positively biased at almost all sample sizes for D1, and almost unbiased for D2 (Figure S1).
 
-When covariate information is not available for fitting the model, the mixture model detection functions still performed well, showing that when covariates are not available mixture components can compensate, though not through using additional components (see Figure S3, 3-point mixtures are never AIC-best models).  For the K+A models without covariates, performance was also similar to that from the covariate models, indicating that the flexibility provided by the series adjustment can compensate for lack of covariate information in that framework.  However, results were still slighlty biased even at large sample sizes (Figure S1).  As might be expected, bias was less when both approaches were combined (Figure S2).
+When covariate information is not available for fitting the model, the mixture model detection functions still performed well, showing that when covariates are not available mixture components can compensate, though not through using additional components (see Figure S3, 3-point mixtures are never AIC-best models).  For the K+A models without covariates, performance was also similar to that from the covariate models, indicating that the flexibility provided by the series adjustment can compensate for lack of covariate information in that framework.  However, results were still slightly biased even at large sample sizes (Figure S1).  As might be expected, bias was less when both approaches were combined (Figure S2).
 
 The Group E results were encouraging.  Although the mixture formulation was biased even at large sample sizes, the bias was always small (Figure \ref{sim-boxplots}), and generally no worse than that under the K+A formulation, which also showed a small bias (Figure S1). We had anticipated good performance of the mixture models for scenario E1, since the detection function shape is not far from half-normal; however it was not obvious that performance would be good for E2, where the marginal shape cannot be approximated well by a mixture of half-normal functions.  The combined strategy was no worse than either formulation alone in terms of bias.  
 
 
 \subsection*{Case studies results}
 
-\textbf{British Columbia marine mammals.} Results are summarised in Table \ref{williams-pike-table} and detection functions for the AIC-best models are shown in Figure \ref{williams-detfcts}. In each case mixture models were two component models.  For harbour seal, the mixture model had a lower AIC than for the K+A model reported in Williams and Thomas \cite{Williams:2007tc}. The $\hat{P}_a$ is approximately 20\% lower, implying that the previous estimate of $\hat{N}$ may have been an overestimate.  For harbour porpoise, the mixture model AIC is almost 1.5 points higher than the K+A model, which was a hazard-rate with no adjustments.  Hence, the model likelihoods are very similar, but the penalty due to the 2-point mixture having an additional parameter prevents it from being selected.  The $\hat{P}_a$ from the two models are very close.  Lastly, for humpback whales, the mixture model AIC is almost 3 points higher than the K+A model -- however, one advantage of the mixture model is that the fitted function is monotone (Figure \ref{williams-detfcts}) while the K+A function is not (Figure \ref{fig1}).  Again, the estimated $\hat{P}_a$s are very similar.
+\textbf{British Columbia marine mammals.} Results are summarised in Table \ref{williams-pike-table} and detection functions for the AIC-best models are shown in Figure \ref{williams-detfcts}. In each case mixture models were two component models. For harbour seal, the mixture model had a lower AIC than for the K+A model reported in Williams and Thomas \cite{Williams:2007tc}. The mixture model $\hat{P}_a$ is approximately 20\% lower, implying that the previous estimate of $\hat{N}$ may have been an underestimate (as $P_a$ decreases, $1/P_a$ increases in the Horvitz-Thompson estimator giving a larger estimate of abundance). For harbour porpoise, the mixture model AIC is almost 1.5 points higher than the K+A model, which was a hazard-rate with no adjustments. Hence, the model likelihoods are very similar, but the penalty due to the 2-point mixture having an additional parameter prevents it from being selected.  The $\hat{P}_a$ from the two models are very close. Lastly, for humpback whales, the mixture model AIC is almost 3 points higher than the K+A model -- however, one advantage of the mixture model is that the fitted function is monotone (Figure \ref{williams-detfcts}) while the K+A function is not (Figure \ref{fig1}). Again, the estimated $\hat{P}_a$s are very similar.
 
 \textbf{Long-finned pilot whales.} A mixture model detection function was fitted with each covariate, as well as a model with no covariates. The best model by AIC score (Table \ref{williams-pike-table}) was a 2-point mixture with Beaufort sea state included as a continuous covariate. Figure \ref{danpike-detfct} shows the average detection function (in the sense that a detection function was evaluated over the range $(0,w)$ for each covariate combination and was then averaged point-wise) and the marginal detection function with the quartiles of Beaufort sea state. None of the non-monotonic behaviour seen in Figure \ref{fig1} can occur when a mixture is used.
 
@@ -244,25 +240,25 @@ The Group E results were encouraging.  Although the mixture formulation was bias
 
 \section*{Discussion}
 
-We have investigated and demonstrated the utility of detection functions constructed from mixtures of half-normal functions in both line and point transect distance sampling. We also show that covariates can be readily included in such models. Further, these mixture detection functions can be simply ``dropped into'' other extensions of conventional distance sampling such as: methods for dealing with incomplete detection at zero distance \cite{Laake:2004tz, Laake:2011vm} (for these models, there is an additional mark-recapture component to the likelihood, where mixture models could also be used, as in \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}) or spatial models for distance sampling data \cite{Hedley:2004et, Miller:2013us}.
+We have investigated and demonstrated the utility of detection functions constructed from mixtures of half-normal functions in both line and point transect distance sampling. We also show that covariates can be readily included in such models. Further, these mixture detection functions can be simply ``dropped into'' other extensions of conventional distance sampling such as: methods for dealing with incomplete detection at zero distance \cite{Laake:2004tz, Laake:2011vm} (for these models, there is an additional mark-recapture component to the likelihood, where mixture models could also be used, as in \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}), spatial models for distance sampling data \cite{Hedley:2004et, Miller:2013us} or models for surveys where distances were measured with error \cite{Borchers:2010bq}.
 
-We have shown that the mixture models perform well on both simulated and real data where traditional methods produce suboptimal results. In many cases the proposed model outperformed K+A models in AIC terms, which is surprising given that the K+A formulation is designed to produce parsimonious and realistic fits, and that the mixture models in question often had more parameters. In particular mixture model detection functions appear useful when dealing with line transect data that has a spike in detection probability at small distances, though we note that it is better to avoid collecting such data in the first place, where possible \cite{Buckland:2001vm}.  Also, other non-detection-related factors can cause a spike, such as rounding of measurements or responsive animal movement, and if present in the data these should be dealt with using other analysis strategies or field methods \cite{Buckland:2001vm}.  For line transect surveys, unbiased estimation of $P_a$ was possible even for very spiked detection functions, so long as the sample size of observations was large (Scenarios A2 and A4).  By contrast, estimates remained badly biased at all sample sizes for the equivalent point transect scenarios (B2 and B4). For such surveys, where such a small proportion of the data comes from the closer distances, then perhaps the only effective solution is to constrain the fit, for example using a Bayesian approach with strong priors on the detection function parameters.
+We have shown that the mixture models perform well on both simulated and real data where traditional methods produce suboptimal results. In many cases the proposed model outperformed K+A models in AIC terms, which is surprising given that the mixture models in question often had more parameters. In particular mixture model detection functions appear useful when dealing with line transect data that has a spike in detection probability at small distances, though we note that it is better to avoid collecting such data in the first place, where possible \cite[, p. 42]{Buckland:2001vm}.  Also, other non-detection-related factors can cause a spike, such as rounding of measurements or responsive animal movement, and if present in the data these should be dealt with using other analysis strategies or field methods \cite{Buckland:2001vm}.  For line transect surveys, unbiased estimation of $P_a$ was possible even for very spiked detection functions, so long as the sample size of observations was large (Scenarios A2 and A4).  By contrast, estimates remained badly biased at all sample sizes for the equivalent point transect scenarios (B2 and B4). For such surveys, where such a small proportion of the data comes from the closer distances, then perhaps the only effective solution is to constrain the fit, for example using a Bayesian approach with strong priors on the detection function parameters.
 
-We note that in our case studies, a larger coefficient of variation was reported with mixtures than with half-normal K+A models but mixtures seemed to have lower CVs than hazard-rate K+A models (in the line transect case, ignoring non-monotonic K+A models; see Table \ref{williams-pike-table}). This can be explained by considering the flexibility of the detection function. A half-normal detection function is relatively inflexible so uncertainty it low. However, for a hazard-rate model the shoulder can vary from very small (spiked) to very large (depending on the shape parameter), so the uncertainty in this more flexible model is larger. Mixtures of half-normals lie somewhere in between these two options (summing smaller variances). 
+We note that in our case studies, a larger coefficient of variation in the average detectability was reported with mixtures than with half-normal K+A models but mixtures seemed to have lower CVs (again, of $\hat{P_a}$) than hazard-rate K+A models (in the line transect case, ignoring non-monotonic K+A models; see Table \ref{williams-pike-table}). This can be explained by considering the flexibility of the detection function. A half-normal detection function is relatively inflexible so uncertainty is low (since there is only one parameter and it only affects the scale of the function). However, for a hazard-rate model the shoulder can vary from very small (spiked) to very large (depending on the shape parameter), so the uncertainty in this more flexible model is larger. Mixtures of half-normals lie somewhere in between these two options (only the scales change which are weighted, we are then summing smaller variances). 
 
 Simulations show that small sample sizes do not support the use of mixture models with a high number of components, even when the data were generated from such a model. We avoid poorly fitting models of this sort by using both K+A and mixture detection functions and selecting the best between them (comparing Fig. \ref{sim-boxplots} with Figure S1). This integrated approach is builds upon current model selection procedures for a detection function analysis -- currently selection is made between different K+A formulations and number of adjustment terms using AIC; mixture models simply add another alternative detection function where rather than adjustment terms, mixture components are selected. So existing key-only models are special cases of the mixture detection functions.
 
-In simulation we observed that 3-point mixture did not act as good surrogates for missing covariate information; 2-point mixtures were generally chosen by AIC as good models (however these models were useful). In our case studies, 2-point mixtures consistently provided the best fit. Only examination of further data will show whether 3-point and higher mixtures can be supported, however we note that when the K+A series formulation is used, detection functions with 5 or more parameters are rarely selected by AIC (a 3-point mixture with no covariates requires 5 parameters).
+In simulation we observed that 3-point mixture did not act as good surrogates for missing covariate information; 2-point mixtures were generally chosen by AIC (though these 2-point models performed well at higher sample sizes). In our case studies, 2-point mixtures consistently provided the best fit. Only examination of further data will show whether 3-point and higher mixtures can be supported, however we note that when the K+A series formulation is used, detection functions with 5 or more parameters are rarely selected by AIC (a 3-point mixture with no covariates requires 5 parameters). These results echo those in capture-recapture literature \cite{Pledger:2000tc}, where often only 2 component mixtures were selected.
 
-We have compared the new mixture approach for modelling detection functions with the most widely used alternative, K+A. However, other approaches exist, for example nonparametric and semiparametric kernel estimators (see Eidous \cite{Eidous:2011} and references therein).  So far as we are aware, all current alternatives fail some of the criteria given in the introduction -- for example, the kernel functions can be non-monotonic. Giammarino \& Quatto \cite{Giammarino:2014eg} have proposed a ``mixture model'' detection function -- their model takes a rather different form to the mixtures we describe here (simply $\exp\left( -x^2/(2\sigma^2)) - x/\tau\right)$), though their results indicate there is little difference between their model and K+A approaches.
+We have compared the new mixture approach for modelling detection functions with the most widely used alternative, K+A. However, other approaches exist, for example nonparametric and semiparametric kernel estimators (see Eidous \cite{Eidous:2011} and references therein). So far as we are aware, all current alternatives fail some of the criteria given in the introduction -- for example, the kernel functions can be non-monotonic. Giammarino \& Quatto \cite{Giammarino:2014eg} have proposed a ``mixture model'' detection function -- their model takes a rather different form to the mixtures we describe here (simply $\exp\left( -x^2/(2\sigma^2)) - x/\tau\right)$), though their results indicate there is little difference between their model and K+A approaches.
 
-The mixture component used here was a half-normal, but other component functions may prove useful.  In particular, a mixture of hazard-rate functions with different shape and/or scale parameters for each component may be better at fitting detection functions with a wide shoulder, a steep drop-off and then a second plateau in detectability (see E2 in Figure \ref{sim-detfcts}, which was generated from a mixture of two hazard-rate functions).  Further, a mixture of a half-normal (or hazard-rate) and a uniform kernel may proove useful -- this would have only two (or three) parameters, and hence may be more competitive (in AIC terms) with K+A models.
+The mixture component used here was a half-normal, but other component functions may prove useful.  In particular, a mixture of hazard-rate functions with different shape and/or scale parameters for each component may be better at fitting detection functions with a wide shoulder, a steep drop-off and then a second plateau in detectability (see E2 in Figure \ref{sim-detfcts}, which was generated from a mixture of two hazard-rate functions).  Further, a mixture of a half-normal (or hazard-rate) and a uniform kernel may prove useful -- this would have only two (or three) parameters, and hence may be more competitive (in AIC terms) with K+A models.
 
 Another potentially useful extension is continuous mixtures of the form
 \begin{equation*}
 g(x) = \int_\mathbb{R} \varphi(\kappa) g_\kappa(x,\mathbf{Z}; \theta, \kappa) \text{d}\kappa
 \end{equation*}
-where $\varphi(\kappa)$ is a weighting function that controls the mixing of $g_\kappa$. Provided that an appropriate function can be chosen for $\varphi$, more flexible models could be used whilst keeping the number of parameters low. In addition, a combination of both finite and continuous mixtures could be used, echoing the work in capture-recapture \cite{Morgan:2008wy}.
+where $\varphi(\kappa)$ is a weighting function that controls the mixing of $g_\kappa$. Provided that an appropriate function can be chosen for $\varphi$, more flexible models could be used whilst keeping the number of parameters low. In addition, a combination of both finite and continuous mixtures could be used, echoing the work in capture-recapture \cite{Morgan:2008wy}. Such models require more complex optimisation procedures in order to estimate their parameters in a maximum likelihood context, though are well suited to a Bayesian setting.
 
 Mixture model detection functions based on half-normal components are available as an R package, mmds, which is available on CRAN. These models will be added to the next version of the Distance for Windows software and the R package Distance.
 
@@ -306,19 +302,19 @@ DLM acknowledges the UK Engineering and Physical Sciences Research Council for f
 \hline
 Harbour seal (in water) & Hn + $\cos(2)$ & 1.19 & 0.425 & 7.55 & 0.52\\
 \hline
- & Hn 2-pt  & 0 & 0.335 & 15.38 & 0.94\\
+ & Hn 2-pt  & 0.00 & 0.335 & 15.38 & 0.94\\
 \hline
-Harbour porpoise& Hr  & 0 & 0.212 & 32.0 & 0.99\\
+Harbour porpoise& Hr  & 0.00 & 0.212 & 32.0 & 0.99\\
 \hline
  & Hn 2-pt & 1.43 & 0.254 & 18.18 & 0.99\\
 \hline
-Humpback whale & Hn + $\cos(2)$ & 0 & 0.386 & 12.64 & 0.67 \\
+Humpback whale & Hn + $\cos(2)$ & 0.00 & 0.386 & 12.64 & 0.67 \\
 \hline
  & Hn 2-pt & 2.88 & 0.381 & 18.48 & 0.64 \\
 \hline
 Long-finned pilot whales  & Hn + $\cos(2)$ BSS (cont.) & 1.94 & 0.452 & 8.69 & 0.48\\ % mrds
 \hline
-& Hn 2-pt          &  13.86  &  0.295  &  17.17  &  0.95 \\
+ & Hn 2-pt  BSS (cont.) & 0.00  &  0.216  &  24.17  &  0.67 \\
 \hline
  & Hn 2-pt BSS5         &  0.29   &  0.208  &  28.84  &  0.82 \\
  \hline
@@ -326,46 +322,46 @@ Long-finned pilot whales  & Hn + $\cos(2)$ BSS (cont.) & 1.94 & 0.452 & 8.69 & 0
  \hline
  & Hn 2-pt  BSS3        &  11.71 &  0.270  &  17.46  &  0.99 \\
  \hline
- & Hn 2-pt  BSS (cont.) & 0  &  0.216  &  24.17  &  0.67 \\
+ & Hn 2-pt          &  13.86  &  0.295  &  17.17  &  0.95 \\
  \hline
 Wood ants & Hr nest.size + habitat & 6.29 & 0.195  & 21.72 & 0.89\\ % mrds result
 \hline
- & Hn 2-pt  None                                                     &  17.34 &  0.184  &  15.46  &  0.96 \\
+ & Hn 2-pt habitat + nest.size                     &  0.00      &  0.179  &  17.55  &  0.72 \\
  \hline
- & Hn 2-pt habitat                                          &  14     &  0.188  &  14.85  &  0.97 \\
- \hline
- & Hn 2-pt species                                          &  19.32  &  0.184  &  15.48  &  0.94 \\
- \hline
+ & Hn 2-pt nest.size + species + habitat  &  1.81   &  0.178  &  18.09  &  0.83 \\
+  \hline
  & Hn 2-pt nest.size                                        &  4.37   &  0.214  &  15.19  &  0.76 \\
- \hline
- & Hn 2-pt habitat + species                       &  15.96  &  0.186  &  14.94  &  0.99 \\
- \hline
- & Hn 2-pt habitat + nest.size                     &  0      &  0.179  &  17.55  &  0.72 \\
  \hline
  & Hn 2-pt nest.size + species                     &  4.65   &  0.210  &  15.84  &  0.77 \\
  \hline
- & Hn 2-pt nest.size + species + habitat  &  1.81   &  0.178  &  18.09  &  0.83 \\
+ & Hn 2-pt habitat                                          &  14.00     &  0.188  &  14.85  &  0.97 \\
+ \hline
+ & Hn 2-pt habitat + species                       &  15.96  &  0.186  &  14.94  &  0.99 \\
+ \hline
+ & Hn 2-pt  None                                                     &  17.34 &  0.184  &  15.46  &  0.96 \\
+ \hline
+ & Hn 2-pt species                                          &  19.32  &  0.184  &  15.48  &  0.94 \\
 \hline
-Amakihi  & Hr obs + mas & 0 &  0.319 & 5.11 & 0.08\\ % mrds
-\hline
- & Hn 2-pt None                                    &  28.1   &  0.283  &  6.21  &  0.12 \\
-\hline
- & Hn 2-pt obs                            &  1.31   &  0.279  &  5.86  &  0.04 \\
-\hline
- & Hn 2-pt has                            &  29.81  &  0.282  &  6.95  &  0.33 \\
-\hline
- & Hn 2-pt mas                            &  27.73  &  0.284  &  6.52  &  0.31 \\
-\hline
- & Hn 2-pt obs+has               &  5.15   &  0.283  &  6.21  &  0.23 \\
+Amakihi  & Hr obs + mas & 0.00 &  0.319 & 5.11 & 0.08\\ % mrds
 \hline
  & Hn 2-pt obs+mas               &  0.69   &  0.279  &  6.1  &  0.14 \\
 \hline
- & Hn 2-pt mas+has               &  31.79  &  0.282  &  6.97  &  0.43 \\
+ & Hn 2-pt obs                            &  1.31   &  0.279  &  5.86  &  0.04 \\
+ \hline
+ & Hn 2-pt obs+has               &  5.15   &  0.283  &  6.21  &  0.23 \\
 \hline
  & Hn 2-pt mas+has+obs  &  7.12  &  0.282  &  6.33  &  0.35 \\
+ \hline
+ & Hn 2-pt mas                            &  27.73  &  0.284  &  6.52  &  0.31 \\
+ \hline
+ & Hn 2-pt None                                    &  28.10   &  0.283  &  6.21  &  0.12 \\
+\hline
+ & Hn 2-pt has                            &  29.81  &  0.282  &  6.95  &  0.33 \\
+\hline
+ & Hn 2-pt mas+has               &  31.79  &  0.282  &  6.97  &  0.43 \\
 \hline
 \end{tabular}
-\begin{flushleft}Comparison of results from Williams and Thomas \cite{Williams:2007tc}, Pike et al. \cite{Pike:2003ug}, Borkin et al. \cite{Borkin:2012vj} and Marques et al. \cite{Marques:2007vm} with results from fitting mixture model detection functions. In each case the first line for each data set is the model from the original article. Mixture model components were selected by AIC ($\Delta$AIC from best model is listed). In the table ``(cont.)'' denotes that the covariate was included in the model as continuous, otherwise covariates entered the model as factors (BBSn indicates Beaufort sea state with $n$ factors). $\cos(x)$ indicates a Cosine adjustment of order $x$. K-S $p$ is the $p$-value from a Kolmogorov-Smirnov goodness-of-fit test.
+\begin{flushleft}Comparison of results from Williams and Thomas \cite{Williams:2007tc}, Pike et al. \cite{Pike:2003ug}, Borkin et al. \cite{Borkin:2012vj} and Marques et al. \cite{Marques:2007vm} with results from fitting mixture model detection functions. Table columns give case study species, model fitted (In the table ``(cont.)'' denotes that the covariate was included in the model as continuous, otherwise covariates entered the model as factors; BBSn indicates Beaufort sea state with $n$ factors); $\cos(x)$ indicates a Cosine adjustment of order $x$), difference in AIC from AIC-best model (denotes with $\Delta$AIC=0), average detectability, percentage coefficient of variation in average detectability and $p$-value from a Kolmogorov-Smirnov goodness-of-fit test. In each case the first line for each data set is the model from the original article and the subsequent models are in $\Delta$AIC order. Mixture model components were selected by AIC ($\Delta$AIC from best model is listed). 
 \end{flushleft}
 \label{williams-pike-table}
 \end{table}
@@ -389,7 +385,7 @@ Amakihi  & Hr obs + mas & 0 &  0.319 & 5.11 & 0.08\\ % mrds
 \centering
 %\includegraphics[width=\textwidth]{Figure2.eps}
 \caption{
-{\bf Plots of the models used in the simulation.} Group A (top row): detection functions for four line transect senarios with no covariates (solid lines) and their constituent mixture components (dashed lines). Group B (second row): pdfs for four point transect simulations with no covariates (solid lines), with associates component pdfs (dashed lines), rescaled so the area under each curve is one; the detection functions are as in the top row. Group C (third row): two 3-point mixture scenarios for non-covariate line transect data. Group D (fourth row): two covariate model scenarios, the first two panels are for a binary covariate scenario, the second two for a continuous covariate scenario; first panels in each pair show the detection function averaged over the covariates (along with the mixture components, similarly averaged) and the second panels show marginal detection functions with the levels (or quartiles) of the detection function.  Group E (fifth row): exponential power series model and a 2-point mixture of hazard-rate function (see Appendix S2 for formulation) for two line transect scenarios.
+{\bf Plots of the models used in the simulation.} Group A (top row): detection functions for four line transect senarios with no covariates (solid lines) and their constituent mixture components (dashed lines). Group B (second row): pdfs for four point transect simulations with no covariates (solid lines), with associated component pdfs (dashed lines), rescaled so the area under each curve is one; the detection functions are as in the top row. Group C (third row): two 3-point mixture scenarios for non-covariate line transect data, again with their constituent mixture components (dashed lines). Group D (fourth row): two covariate model scenarios, the first two panels are for a binary covariate scenario, the second two for a continuous covariate scenario; first panels in each pair show the detection function averaged over the covariates (along with the mixture components, similarly averaged) and the second panels show marginal detection functions with the levels (or quartiles) of the detection function.  Group E (fifth row): exponential power series model and a 2-point mixture of hazard-rate function (see Appendix S2 for formulation) for two line transect scenarios.
 }
 \label{sim-detfcts}
 \end{figure}
