--- a/dsmixtures.bib
+++ b/dsmixtures.bib
@@ -463,3 +463,15 @@ calculate abundance/density for biological populations.},
     note = {R package version 0.6.1},
     url = {http://CRAN.R-project.org/package=Distance},
   }
+@article{Borchers:2010bq,
+author = {Borchers, David and Marques, Tiago and Gunnlaugsson, Thorvaldur and Jupp, Peter},
+title = {{Estimating Distance Sampling Detection Functions When Distances Are Measured With~Errors}},
+journal={Biometrics},
+year = {2010},
+volume = {15},
+number = {3},
+pages = {346--361},
+month = mar
+}
+
+
